--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8088
+
 spring:
   messages:
     basename: messages
@@ -7,8 +8,14 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
-#    static-path-pattern: /resources/**
+    static-path-pattern: /resources/**
 
   devtools:
     livereload:
       enabled: true
+
+  h2:
+    console:
+      enabled: true
+  jpa:
+    show-sql: true
